<resources>
    <string name="app_name">LifeSource</string>
    <string name="tempMapText">Hello World! Map</string>
    <string name="tempNewsText">Hello World! News</string>
    <string name="enterNameHint">Name</string>
    <string name="countDownText">Count down</string>
    <string name="defaultDays">0</string>
    <string name="recentReminders">Recent Reminders</string>
    <string name="tempToolbarIcon">Help</string>
    <string name="mapIcon">Map</string>
    <string name="newsIcon">News</string>
    <string name="profileIcon">Profile</string>
    <string name="helpText">Welcome to LifeSource, a blood donation app! We aim to incentivize blood donation by highlighting monetary compensation at each donation center. We provide all the tools necessary to navigate the donation process and learn more.\n\nOn the Map screen, look around for different blood donation centers by clicking on each map pin. Upon clicking on a pin, an info window with relevant information about that donation center appears. Click on this info window to be redirected to that donation center\'s website. Click the home button to center the map back to the default location, UCrossing. Click the user location icon on the top right to center the map at your location, if it is known and permissions were granted. Otherwise, this also brings the map to the default location.\n\nOn the News screen, scroll through the news feed to locate an interesting article. Click on an article to open it up. Click on the accompanying bookmark icon to the right of each article to toggle bookmarking for it. View all your bookmarked articles by clicking the bookmark icon on the top right, next to the search bar. On the search bar, search for specific article keywords. Drag the screen down to refresh the article feed.\n\nOn the Profile screen, manage your appointment reminders. Set your name and profile picture here. Add reminders using the add icon on the bottom right. A pop-up window allows you to set a reminder name and calendar date. Delete reminders by clicking the accompanying delete icon.</string>
    <string name="editReminderText">Enter a reminder</string>
    <string name="addReminderButton">Add Reminder</string>
    <string name="exitButton">Exit</string>
    <string name="homeButton">Home</string>
</resources>