<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <EditText
        android:id="@+id/nameView"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:hint="@string/enterNameHint"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countDownText"
        android:layout_width="172dp"
        android:layout_height="78dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/countDownText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView" />

    <TextView
        android:id="@+id/daysLeftInCountDown"
        android:layout_width="82dp"
        android:layout_height="55dp"
        android:layout_marginTop="84dp"
        android:text="@string/defaultDays"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/countDownText"
        app:layout_constraintTop_toBottomOf="@+id/nameView" />

    <TextView
        android:id="@+id/recentRemindersView"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/recentReminders"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView"
        app:layout_constraintVertical_bias="0.413" />

</androidx.constraintlayout.widget.ConstraintLayout>